force-app/main/default/objects/Outreach_Log__c/Outreach_Log__c.object-meta.xml
<CustomObject>
    <label>Outreach Log</label>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Outreach Log number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>