force-app/main/default/objects/Outreach_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outreach Logs</relationshipLabel>
    <relationshipName>Outreach_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>