force-app/main/default/objects/Outreach_Log__c/fields/Log_Body__c.field-meta.xml
<CustomField>
    <fullName>Log_Body__c</fullName>
    <label>Log Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>