force-app/main/default/objects/Outreach_Log__c/fields/Outreach_Date__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Date__c</fullName>
    <label>Outreach Date</label>
    <type>Date</type>
</CustomField>