force-app/main/default/objects/Outreach_Log__c/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName>
    <label>Outreach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>